added a little bit of css

--- a/week-2/exercise-2-3-4/static/css/style.css
+++ b/week-2/exercise-2-3-4/static/css/style.css
@@ -45,10 +45,19 @@ main > section {
 	background-color: #F7FDB6;
 }
 
-/*li.photoItem{
-	width: 10em;
+
+.photoItem {
+	width: 25em;
 	display: inline-block;
-}*/
+}
+.photoItem img {
+	max-width: 100%;
+}
+
+.photoItem span {
+	display: block;
+	max-width: 100%;
+}
 
 .active {
 	display: block;
