--- a/week-3/static/css/style.css
+++ b/week-3/static/css/style.css
@@ -5,6 +5,11 @@
 	box-sizing: border-box;
 }
 
+body {
+	max-width: 100%;
+	max-height: 100%;
+}
+
 #nav ul{
 	display: flex;
 	flex-direction: row;
@@ -14,8 +19,17 @@
 	width: 50%;
 	padding: 1em;
 	list-style-type: none;
-	background-color: #21825C;
 	text-align: center;
+	color: black;
+	border-bottom: 2px solid black;
+}
+
+#nav ul li:first-of-type{
+	border-right: 1px solid black;
+}
+
+#nav ul li:nth-of-type(2){
+	border-left: 1px solid black;
 }
 
 #nav ul li:hover {
@@ -23,10 +37,28 @@
 }
 
 #nav ul li a {
-	color: white;
+	color: #000;
 	text-decoration: none;
 	font-size: 1.5;
 	font-family: sans-serif;
+}
+
+/* main */
+main {
+	width: 100vh;
+}
+/* loader */ 
+.loader{
+	display: none;
+}
+
+.loader-active{
+	display: block;
+	width: ;
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%,-50%);
 }
 
 main > section {
