added modules, gestures, functional animations and updated css

--- a/week-3/static/css/style.css
+++ b/week-3/static/css/style.css
@@ -1,4 +1,17 @@
-/* http://colorhunt.co/c/13136 */
+/*////////////////
+/////// ALL //////
+////////////////*/
+@font-face {
+    font-family: CircularStd-Bold;
+    src: url(/assets/fonts/CircularStd-Bold.otf) format('opentype');
+}
+
+@font-face {
+    font-family: CircularStd-Book;
+    src: url(/assets/fonts/CircularStd-Book.otf) format('opentype');
+}
+
+
 * {
 	margin: 0;
 	padding: 0;
@@ -6,8 +19,21 @@
 }
 
 body {
+	font-family: 'CircularStd-Book', sans-serif;
 	width: 100vw;
 	height: 100vh;
+	-webkit-overflow-scrolling: touch;
+}
+
+.colorMint{
+	color: #4CBA9C;
+}
+/*////////////////
+/////// NAV //////
+////////////////*/
+
+#nav {
+	background-color: #4CBA9C
 }
 
 #nav ul{
@@ -18,64 +44,219 @@ body {
 
 #nav ul li {
 	width: 25%;
-	padding: .5em 1em;
 	list-style-type: none;
 	text-align: center;
-	color: black;
+	color: #fff;
 	margin: .5em;
-	border: 2px solid #88304E;
-	border-radius: 10px;
+	border: 4px solid #fff;
+	transition: .5s all ease;
+}
+#nav ul li:hover{
+	background-color: rgba(255,255,255,.3);
 }
 
 #nav ul li a {
-	color: #000;
+	display: block;
+	color: #fff;
 	text-decoration: none;
-	font-size: 1.5;
-	font-family: sans-serif;
+	padding: .5em 1em;
+	font-size: 1.5em;
+	font-family: "CircularStd-Bold", sans-serif;
 }
 #nav ul li a:target{
-	color: red
+	color: #grey;
 }
 
 .menu-active {
-	border-bottom: 2px solid #88304E;
+	border-bottom: 2px solid #4CBA9C;
 }
-/* main */
+/*////////////////
+// USER-SEARCH ///
+////////////////*/
 
-/* loader */ 
-.loader{
-	display: none;
+.search-area-container {
+	max-width: 30%;
+	margin: 0 auto;
+	margin-top: 1em;
+	text-align: center;
 }
 
-.loader-active{
+.search-area-container input[type="text"] {
 	display: block;
-	width: ;
-	position: absolute;
-	left: 50%;
-	top: 50%;
-	transform: translate(-50%,-50%);
-}
-
-/* effects */
-.scale-img{
-	transform: scale(1.1);
-}
-main > section {
-	display: none;
-}
-
-#startscreen {
 	width: 100%;
-	height: 80vh;
-	background-color: #424141;
+	margin: 1em 0;
+	padding: .5em;
+	border: none;
+	font-family: 'CircularStd-Bold', sans-serif;
+	border: 4px solid #4CBA9C;
+	color: #4CBA9C;
+	font-size: 2em;
+	text-align: center;
 }
 
-#photo-feed {
+.search-area-container input[type="text"]:focus {
+    outline: 2px #4CBA9C;
+}
+
+.search-area-container input[type="submit"]{
+	font-size: 2em;
+	cursor: pointer;
+	margin: 1em 0;
 	width: 100%;
-	height: 80vh;
-	/*background-color: grey*/
+	padding: .5em;
+	background-color: #4CBA9C;
+	color: #fff;
+	font-family: 'CircularStd-Bold', sans-serif;
+	border: 4px solid #4CBA9C;
+	-webkit-transition: .5s all ease;
+	        transition: .5s all ease;
+}  
+.search-area-container input[type="submit"]:hover{
+	background-color: #fff;
+	border-color: #737372;
+	color: #4CBA9C;
 }
 
+
+/*////////////////
+// USER GALLERY //
+////////////////*/
+
+#user-gallery-ul {
+	text-align: center;
+}
+
+h1[data-bind="userNameTag"] {
+	font-family: 'CircularStd-Bold', sans-serif;
+	font-size: 3em;
+	color: grey;
+	text-align: center;
+}
+h1[data-bind="userNameTag"]::first-letter{
+	color: #4CBA9C;
+}
+
+#user-gallery-ul li a {
+	text-decoration: none;
+}
+
+#user-gallery-ul li {
+    display: inline-block;
+    width: min-content;
+    padding: 1em;
+    margin: 2.5em;
+    text-align: center;
+    transition: 1s all ease;
+}
+
+#user-gallery-ul li span[data-bind="username"]{
+	color: #4CBA9C;
+	text-decoration: none;
+	font-family: 'CircularStd-Bold', sans-serif;
+	font-size: 1.2em;
+	opacity: 0;
+	transition: 1s all ease;
+}
+
+#user-gallery-ul li:hover  span[data-bind="username"]{
+	opacity: 1;
+}
+
+/*////////////////
+/USER DETAIL VIEW/
+////////////////*/
+
+#user-info{
+	display: flex;
+	flex-direction: row;
+    width: 60%;
+    margin: 0 auto;
+    padding: 4em 0em;
+}
+
+#user-info span[data-bind="errorMessage"]{
+	font-family: 'CircularStd-Bold', sans-serif;
+	font-size: 3em;
+	color: grey;
+	text-align: left;
+}
+
+#user-info img{
+	border-radius: 50%;
+}
+
+.user-detail-info{
+	margin-left: 1em;
+}
+
+.user-detail-info a{
+	text-align: center;
+	color: #97D5BC;
+    display: block;
+}
+
+.user-detail-info-media{
+	display: block;
+    margin: 2em 0;
+    width: max-content;
+}
+
+.user-detail-info-media span {
+    margin: 0 2em;
+    font-size: 1.2em;
+    color: #737372;
+}
+
+.user-detail-info span[data-bind="bio"]{
+	display: block;
+    text-align: center;
+    color: #737372;
+    font-size: 1.2em;
+    font-style: italic;
+}
+
+.user-info-username {
+	font-family: 'CircularStd-Bold', sans-serif;
+	font-size: 2em;
+	color: #4CBA9C;
+}
+
+/*////////////////
+/ USER PHOTO FEED/
+////////////////*/
+#user-photo-feed{
+	text-align: center;
+}
+
+#user-photo-feed li{
+    display: inline-block;
+    padding: 1em;
+    text-align: center;
+    transition: 1s all ease;
+}
+
+#user-photo-feed li a {
+	text-decoration: none;
+}
+
+#user-photo-feed li span[data-bind="likes"]{
+	font-family: 'CircularStd-Bold', sans-serif;
+	font-size: 2em;
+	color: #4CBA9C;
+}
+
+.user-feed-photo-hover{
+	transition: 1s all ease;
+	opacity: 0;
+}
+
+#user-photo-feed li:hover .user-feed-photo-hover {
+	opacity: 1;
+}
+
+.user-photo-feed-heart{
+	fill: #4CBA9C;
+}
 
 .photoItem {
 	width: 25em;
@@ -90,6 +271,186 @@ main > section {
 	max-width: 100%;
 }
 
+/*////////////////
+/// TAG SEARCH ///
+////////////////*/
+
+.search-area-container {
+	max-width: 30%;
+	margin: 0 auto;
+	margin-top: 1em;
+	text-align: center;
+}
+
+.search-area-container input[type="text"] {
+	display: block;
+	width: 100%;
+	margin: 1em 0;
+	padding: .5em;
+	border: none;
+	border: 4px solid #4CBA9C;
+	color: #4CBA9C;
+	font-size: 2em;
+	text-align: center;
+}
+
+.search-area-container input[type="text"]:focus {
+    outline: none;
+}
+
+#photo-gallery {
+	text-align: center;
+}
+
+h1[data-bind="tagTitle"] {
+	font-family: 'CircularStd-Bold', sans-serif;
+	font-size: 3em;
+	color: grey;
+	text-align: center;
+}
+h1[data-bind="tagTitle"]::first-letter{
+	color: #4CBA9C;
+}
+
+#photo-gallery li a {
+	text-decoration: none;
+}
+
+#photo-gallery li {
+    display: inline-block;
+    width: max-content;
+    padding: 1em;
+    text-align: center;
+    transition: 1s all ease;
+}
+
+#photo-gallery li span[data-bind="username"]{
+	color: #4CBA9C;
+	text-decoration: none;
+	font-family: 'CircularStd-Bold', sans-serif;
+	font-size: 1.2em;
+	opacity: 0;
+	transition: 1s all ease;
+}
+
+/*#photo-gallery li:hover{
+	transform: scale(1.1);
+}
+*/
+
+/* loader */ 
+.loader{
+	display: none;
+}
+
+.loader-active{
+	display: block;
+	width: 140px;
+	position: absolute;
+	text-align: center;
+	left: 50%;
+	top: 75%;
+	transform: translate(-50%,-75%);
+}
+
+.loader-active > div {
+  width: 35px;
+  height: 35px;
+  background-color: #4CBA9C;
+
+  border-radius: 100%;
+  display: inline-block;
+  -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+  animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+}
+
+.loader-active .bounce1 {
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s;
+}
+
+.loader-active .bounce2 {
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s;
+}
+
+@-webkit-keyframes sk-bouncedelay {
+  0%, 80%, 100% { -webkit-transform: scale(0) }
+  40% { -webkit-transform: scale(1.0) }
+}
+
+@keyframes sk-bouncedelay {
+  0%, 80%, 100% { 
+    -webkit-transform: scale(0);
+    transform: scale(0);
+  } 40% { 
+    -webkit-transform: scale(1.0);
+    transform: scale(1.0);
+  }
+}
+
+/* effects */
+.scale-img{
+	transform: scale(1.1);
+}
+main > section {
+	display: none;
+}
+
+#photo-feed {
+	width: 100%;
+	height: 80vh;
+	/*background-color: grey*/
+}
+
+/*photo-detail-view*/
+
+#photo-detail-view {
+	/*max-width: 500px;*/
+    /*max-width: max-content;*/
+    position: fixed;
+    left: 50vw;
+    top: 50vh;
+    transform: translate(-50%, -50%);
+    background-color: #F9F9F9;
+    text-align: center;
+    padding: 1em;
+    
+   /* border: 5px solid  #4CBA9C;
+    box-shadow: 1em 1em 1em #4CBA9C;*/
+}
+
+#photo-detail-view video{
+	max-width: 30em;
+}
+
+#photo-detail-view a{
+	text-decoration: none;
+}
+
+.photo-detail-view-captions{
+	margin: 2em 1em;
+	max-height: 10em;
+	overflow: scroll;
+	text-align: left;
+	color: grey;
+	font-family: 'CircularStd-Book', sans-serif;
+	font-size: .8em;
+}
+
+.photo-detail-view-captions span{
+	display: block;
+}
+
+.detail-view-user{
+	float: right;
+	color: #4CBA9C;
+}
+
+#photo-detail-view img,
+#photo-detail-view video{
+	margin: 0 auto;
+}
 .photo-detail-view-video {
 	display: none;
 }
@@ -98,8 +459,116 @@ main > section {
 	display: none;
 }
 
+.detail-view-likes{
+	margin-bottom: 1em;
+	color: grey;
+	font-family: 'CircularStd-Bold', sans-serif;
+	font-size: 1.2em;
+}
+
+.detail-view-likes span{
+	display: inline-block;;
+}
+
+.blur {
+	filter: blur(20px) grayscale(20%);
+	-webkit-filter: blur(20px) grayscale(20%);
+}
+
+.hide {
+	display: none;
+}
 
 .active {
 	display: block;
 }
 
+
+@media only screen  
+  and (max-width: 35em){
+	
+	/* loader */
+
+	.loader-active{
+		left: 50%;
+		top: 75%;
+		transform: translate(-50%,-75%);
+	}
+
+	/*nav*/
+	#nav ul li{
+		width: 50%;
+	}
+
+	#nav ul li a {
+	    padding: .5em 1em;
+	}
+
+	/*user search*/
+
+	.search-area-container {
+	    max-width: 90%;
+	}
+
+	.search-area-container input[type="submit"] {
+	    width: 100%;
+	}
+
+	.search-area-container input[type="text"] {
+		margin: 1em 0 0 0 ;
+	}
+
+	#user-gallery-ul li {
+		padding: 0;
+	    margin: 0.5em;
+	}
+
+	#user-gallery-ul li span[data-bind="username"]{
+		opacity: 1;
+	}
+
+	/*user info */
+	#user-info {
+	    width: 90%;
+	    display: block;
+	    padding: 4em 0 1em 0;
+	}
+
+	#user-info img {
+		width: 150px;
+		height: 150px;
+	    margin: 0 auto;
+	    display: block;
+	}
+
+	.user-detail-info {
+	    text-align: center;
+	}
+
+	.user-detail-info-media {
+		width: 100%; 
+	}
+
+	.user-detail-info-media span {
+	    display: block;
+	}
+
+	.user-feed-photo-hover{
+		opacity: 1;
+	}
+
+	/* tag search*/
+
+	#photo-gallery li {
+	   padding: 0;
+	}
+
+	/*detail view*/
+	#photo-detail-view {
+	    max-width: 100vw;
+	}
+
+	#photo-detail-view video {
+	    max-width: 90vw;
+	}
+}
